--- a/final_project_style.css
+++ b/final_project_style.css
@@ -15,3 +15,10 @@
     outline: 0 !important;
     box-shadow: none !important;
   }
+
+  .container-fluid {
+    padding-right:0;
+    padding-left:0;
+    margin-right:auto;
+    margin-left:auto
+  }
